# 
#  $Id: Makefile.am,v 1.1.1.1 2003/04/25 03:30:20 ken Exp $
# 
#  Copyright (C) 1997 Lars Fenneberg
# 
#  See the file COPYRIGHT for the respective terms and conditions. 
#  If the file is missing contact me at lf@elemental.net 
#  and I'll send you a copy.
# 
#

AUTOMAKE_OPTIONS = foreign

noinst_HEADERS = pathnames.h messages.h includes.h
include_HEADERS = radiusclient.h
